Group foodmenu data into sections and sub sections by category and subcategory

--- a/client/src/components/MenuCardHolder/MenuCardHolder.css
+++ b/client/src/components/MenuCardHolder/MenuCardHolder.css
@@ -1,5 +1,8 @@
 .foodmenubox {
-  max-width: 400px;
+  max-width: 100vw;
   margin-left: auto;
   margin-right: auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
